# line_follower_robot_ros2_gazebo

./: .gitignore  README.md  gazebo_log.txt  maze.urdf  myass.txt  requirements.txt  robot.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
logs/: evaluations.npz  monitor.csv
logs/PPO_1/: events.out.tfevents.1743575635.soham-Victus.20479.0
logs/PPO_10/: events.out.tfevents.1743675987.soham-Victus.7446.0
logs/PPO_11/: events.out.tfevents.1743676324.soham-Victus.9011.0
logs/PPO_2/: events.out.tfevents.1743575840.soham-Victus.20966.0
logs/PPO_3/: events.out.tfevents.1743576019.soham-Victus.21396.0
logs/PPO_4/: events.out.tfevents.1743576381.soham-Victus.22213.0
logs/PPO_5/: events.out.tfevents.1743579006.soham-Victus.23694.0
logs/PPO_6/: events.out.tfevents.1743579108.soham-Victus.24132.0
logs/PPO_7/: events.out.tfevents.1743580336.soham-Victus.27171.0
logs/PPO_8/: events.out.tfevents.1743580879.soham-Victus.28053.0
logs/PPO_9/: events.out.tfevents.1743581881.soham-Victus.30236.0
src/: mybashrc.txt  prompt.txt  train_test_rl_env.txt  world_commands.txt
src/ir_sensor_subscriber/: setup.cfg  setup.py
src/ir_sensor_subscriber/ir_sensor_subscriber/: ir_sensor_subscriber.py
src/line_follower_launch/: setup.cfg  setup.py
src/line_follower_launch/launch/: spawn_robot_in_gazebo.launch.py
src/line_follower_pid/: setup.cfg  setup.py
src/line_follower_robot/: CMakeLists.txt
src/rl_pid_tuner/: package.xml  setup.cfg  setup.py
src/rl_pid_tuner/rl_pid_tuner/: rl_env.py
(+89 files in other folders)
